; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_rfbi.c_rfbi_read_data.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/omap/extr_rfbi.c_rfbi_read_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@rfbi = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@RFBI_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @rfbi_read_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rfbi_read_data(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i32 @rfbi_enable_clocks(i32 1)
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rfbi, i32 0, i32 0), align 4
  %9 = icmp eq i32 %8, 16
  br i1 %9, label %10, label %31

10:                                               ; preds = %2
  %11 = load i8*, i8** %3, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = and i32 %13, -2
  %15 = call i32 @BUG_ON(i32 %14)
  br label %16

16:                                               ; preds = %27, %10
  %17 = load i32, i32* %4, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %30

19:                                               ; preds = %16
  %20 = load i32, i32* @RFBI_READ, align 4
  %21 = call i32 @rfbi_write_reg(i32 %20, i32 0)
  %22 = load i32, i32* @RFBI_READ, align 4
  %23 = call i8* @rfbi_read_reg(i32 %22)
  %24 = ptrtoint i8* %23 to i32
  %25 = load i32*, i32** %5, align 8
  %26 = getelementptr inbounds i32, i32* %25, i32 1
  store i32* %26, i32** %5, align 8
  store i32 %24, i32* %25, align 4
  br label %27

27:                                               ; preds = %19
  %28 = load i32, i32* %4, align 4
  %29 = sub i32 %28, 2
  store i32 %29, i32* %4, align 4
  br label %16

30:                                               ; preds = %16
  br label %53

31:                                               ; preds = %2
  %32 = load i8*, i8** %3, align 8
  %33 = bitcast i8* %32 to i32*
  store i32* %33, i32** %6, align 8
  %34 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rfbi, i32 0, i32 0), align 4
  %35 = icmp ne i32 %34, 8
  %36 = zext i1 %35 to i32
  %37 = call i32 @BUG_ON(i32 %36)
  br label %38

38:                                               ; preds = %49, %31
  %39 = load i32, i32* %4, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %52

41:                                               ; preds = %38
  %42 = load i32, i32* @RFBI_READ, align 4
  %43 = call i32 @rfbi_write_reg(i32 %42, i32 0)
  %44 = load i32, i32* @RFBI_READ, align 4
  %45 = call i8* @rfbi_read_reg(i32 %44)
  %46 = ptrtoint i8* %45 to i32
  %47 = load i32*, i32** %6, align 8
  %48 = getelementptr inbounds i32, i32* %47, i32 1
  store i32* %48, i32** %6, align 8
  store i32 %46, i32* %47, align 4
  br label %49

49:                                               ; preds = %41
  %50 = load i32, i32* %4, align 4
  %51 = add i32 %50, -1
  store i32 %51, i32* %4, align 4
  br label %38

52:                                               ; preds = %38
  br label %53

53:                                               ; preds = %52, %30
  %54 = call i32 @rfbi_enable_clocks(i32 0)
  ret void
}

declare dso_local i32 @rfbi_enable_clocks(i32) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @rfbi_write_reg(i32, i32) #1

declare dso_local i8* @rfbi_read_reg(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
